# genesisdb-io-client-python

./: README.md  pyproject.toml  requirements.txt  setup.py
genesisdb/: __init__.py  client.py
tests/: test_client.py
