[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesisdb"
version = "1.0.0"
description = "Genesis DB Python SDK"
readme = "README.md"
authors = [
    { name = "Patric Eckhart", email = "mail@genesisdb.io" }
]
license = { text = "MIT" }
keywords = [
    "genesis",
    "genesisdb",
    "eventstore",
    "eventsourcing",
    "database",
    "database-sdk",
    "sdk",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "cloudevents>=1.9.0",
]

[project.urls]
Homepage = "https://www.genesisdb.io"
Documentation = "https://docs.genesisdb.io"
Repository = "https://github.com/genesisdb/genesisdb-io-client-python"

[tool.setuptools.packages.find]
include = ["genesisdb*"]
